--- a/.giternal.yml
+++ b/.giternal.yml
@@ -16,3 +16,6 @@ zsh-liquidprompt:
 zsh-bd:
   repo: https://github.com/Tarrasch/zsh-bd
   path: lib
+zsh-sub:
+  repo: https://github.com/basecamp/sub
+  path: lib
