--- a/.giternal.yml
+++ b/.giternal.yml
@@ -1,18 +1,15 @@
 completions:
-  repo: https://github.com/zsh-users/zsh-completions.git
-  path: lib
-solarized:
-  repo: https://github.com/sigurdga/gnome-terminal-colors-solarized.git
-  path: lib
-syntax-highlighting:
-  repo: https://github.com/zsh-users/zsh-syntax-highlighting.git
+  repo: https://github.com/zsh-users/zsh-completions
   path: lib
 oh-my-zsh:
-  repo: https://github.com/robbyrussell/oh-my-zsh.git
+  repo: https://github.com/robbyrussell/oh-my-zsh
   path: lib
-liquidprompt:
-  repo: https://github.com/nojhan/liquidprompt
+solarized:
+  repo: https://github.com/sigurdga/gnome-terminal-colors-solarized
   path: lib
-bd:
-  repo: https://github.com/Tarrasch/zsh-bd
+syntax-highlighting:
+  repo: https://github.com/zsh-users/zsh-syntax-highlighting
+  path: lib
+zaw:
+  repo: https://github.com/zsh-users/zaw
   path: lib
