feat(lib): adding bd and dd to go back dirs

--- a/.giternal.yml
+++ b/.giternal.yml
@@ -1,3 +1,6 @@
+bd:
+  repo: https://github.com/Tarrasch/zsh-bd
+  path: lib
 completions:
   repo: https://github.com/zsh-users/zsh-completions
   path: lib
